@@ -1,0 +1,12 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<!DOCTYPE section PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" 
+   "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" [
+		<!ENTITY base SYSTEM "pa_base.xml" >
+	]>
+
+<section id="pa"><title>PA module</title>
+
+&base;
+
+</section>
+
