@@ -1,3 +1,6 @@
+2006-12-07
+	* updated doc to be compilable standalone
+
 2006-11-06
 	* bug correction - noninitialized variable in ask_auth_rules and added
 	return code from xcap_get_pres_rules verification - reported and patched
